# funding_backtester

./: .dockerignore  .gga  .gitignore  AGENTS.md
.atl/: skill-registry.md
.github/: PULL_REQUEST_TEMPLATE.md
analytics/: dbt_project.yml  profiles.yml
backend/: .coverage  .pre-commit-config.yaml  Dockerfile  pyproject.toml  ruff.toml
backend/data/: ticks.duckdb
backend/docs/: indicator-features.md
backend/src/funding_backtester/: _paths.py  config.py  database.py  main.py
backend/src/funding_backtester/api/v1/: features.py  health.py  ohlcv.py
backend/src/funding_backtester/backtesting/: __init__.py  contracts.py  engine.py  strategy.py
backend/src/funding_backtester/core/: dependencies.py
backend/src/funding_backtester/indicators/: __init__.py  catalog.py  duckdb_io.py  engine.py  parameters.py  registry.py  vectorbt_loader.py
backend/src/funding_backtester/schemas/: api.py
backend/src/funding_backtester/scripts/: build_indicator_features.py  load_ticks.py
backend/src/funding_backtester/services/: duckdb_client.py
backend/tests/: conftest.py  test_backtesting_engine.py  test_build_indicator_features.py  test_dbt_integration.py  test_features_api.py  test_health.py  test_indicator_dependencies.py  test_indicator_engine.py  test_indicator_parameters.py  test_indicator_registry.py  test_indicator_vectorbt_loader.py  test_ohlcv.py  test_paths.py  test_tick_pipeline.py
backend/tests/data/: ES0626.txt  MNQ0626.txt  __init__.py
docker/: docker-compose.yml
frontend/: .eslintrc.cjs  .prettierrc  Dockerfile  eslint.config.js  index.html  (+5 more)
(+68 files in other folders)
